<resources>
    <string name="app_name">Snap2Text</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_snap">Snap2Text</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="checkEmail">Please check the link we have sent to your email</string>
</resources>