<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:paddingBottom="80dp"
        android:label=""
        tools:context=".Login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Sign In"
            android:textSize="30sp"
            android:textStyle="bold"
            style="@style/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/please_login_to_your_account"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/round_back_dark_blue5_15"
            android:hint="@string/email"
            style="@style/android_hint"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_back_dark_blue5_15">

            <EditText
                android:id="@+id/passwordET"
                android:layout_toStartOf="@+id/passwordIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                style="@style/android_hint"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:adjustViewBounds="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/password_hide"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/forgotPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/teal_200"
            android:text="Forgot Password?"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="Sign In"
            android:textAllCaps="false"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_back_primary_15"
            android:backgroundTint="@color/app_button"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <View
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1A000000"
                android:layout_toStartOf="@+id/orTxt"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/orTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:layout_centerInParent="true"
                android:textSize="12sp"
                android:textColor="@color/black"/>

            <View
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1A000000"
                android:layout_toEndOf="@+id/orTxt"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/signInWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/round_back_dark_blue5_15"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/google_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Sign In with Google"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"/>

            <TextView
                android:id="@+id/signUpbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Sign Up"
                android:textColor="@color/teal_200"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
